<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="https://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Color category">

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/menuItemDefaultColor"
            android:key="menuItemDefaultColorPreference"
            app:title="@string/menuItemDefaultColor_title"
            app:summary="@string/menuItemDefaultColor_summary"
            app:iconSpaceReserved="false" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/menuItemDefaultTextColor"
            android:key="menuItemDefaultTextColorPreference"
            app:title="@string/menuItemDefaultTextColor_title"
            app:summary="@string/menuItemDefaultTextColor_summary"
            app:iconSpaceReserved="false" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/menuItemSelectedTextColor"
            android:key="menuItemSelectedTextColorPreference"
            app:title="@string/menuItemSelectedTextColor_title"
            app:summary="@string/menuItemSelectedTextColor_summary"
            app:iconSpaceReserved="false" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/menuItemVersionsDefaultColor"
            android:key="menuItemVersionsDefaultColorPreference"
            app:title="@string/menuItemVersionsDefaultColor_title"
            app:summary="@string/menuItemVersionsDefaultColor_summary"
            app:iconSpaceReserved="false" />

        <!--<SwitchPreferenceCompat
            app:key="forceOverridePreference"
            app:title="Enable message notifications"
            app:iconSpaceReserved="false" />-->

    </PreferenceCategory>

</PreferenceScreen>