<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="\n\n\nMods button"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="modsButtonHeightPreference"
            app:title="@string/modsButtonHeight_title"
            app:summary="@string/modsButtonHeight_summary"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="modsButtonWidthPreference"
            app:title="@string/modsButtonWidth_title"
            app:summary="@string/modsButtonWidth_summary"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="modsButtonScalePreference"
            app:title="@string/modsButtonScale_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>